# nnext

./: .gitignore  .gitmodules  CMakeLists.txt  COMPILATION.md  CONTRIIBUTING.md  DevDockerfile  Dockerfile  FAQs.md  INSTALL.md  README.md  main.cpp  server.cpp  server.h  util.h  util.sh
debian-pkg/: make.sh
debian-pkg/nnext-server/DEBIAN/: control  preinst
debian-pkg/nnext-server/etc/nnext/: config.yaml
debian-pkg/nnext-server/etc/systemd/system/: nnext-server.service
debian-pkg/nnext/DEBIAN/: control
protos/: CMakeLists.txt  main.grpc.pb.cc  main.grpc.pb.h  main.pb.cc  main.pb.h  main.proto
